# ToothFairy2

./: .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml  requirements.txt
notebooks/: eda.ipynb  inference.ipynb  preprocessing.ipynb
scripts/: run_pipeline.sh
src/: __init__.py  dataset.py  evaluate.py  losses.py  metrics.py  model.py  train.py  transforms.py  utils.py
viewer/: generate_mesh.py  index.html
