[project]
name = "cbct"
version = "0.1.0"
dependencies = [
    "hatchling>=1.29.0",
    "itk>=5.4.5",
    "itk-filtering>=5.4.5",
    "itk-io>=5.4.5",
    "itk-registration>=5.4.5",
    "itk-segmentation>=5.4.5",
]
[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.8",
    "connected-components-3d>=3.26.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "monai>=1.5.2",
    "nibabel>=5.4.2",
    "numpy>=2.4.3",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "pydicom>=3.0.1",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "simpleitk>=2.5.3",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
